--- a/templates/profile/view.html
+++ b/templates/profile/view.html
@@ -87,7 +87,7 @@
                         </div>
                         {% else %}
                         <p class="text-muted">You haven't created any forum posts yet.</p>
-                        <a href="{{ url_for('forum.index') }}" class="btn btn-sm btn-outline-primary">Browse Forum</a>
+                        <a href="{{ url_for('stories.index') }}" class="btn btn-sm btn-outline-primary">Browse Stories</a>
                         {% endif %}
                     </div>
                     <div class="tab-pane fade" id="jobs" role="tabpanel" aria-labelledby="jobs-tab">
