--- a/templates/mentorship/mentee_dashboard.html
+++ b/templates/mentorship/mentee_dashboard.html
@@ -29,7 +29,7 @@
                                     <p class="card-text">{{ mentor.bio[:150] }}{% if mentor.bio|length > 150 %}...{% endif %}</p>
                                     <div class="d-flex justify-content-between align-items-center">
                                         <small class="text-muted">Available: {{ mentor.availability }}</small>
-                                        <form action="{{ url_for('mentorship.request_mentorship', mentor_id=mentor.id) }}" method="POST" class="d-inline">
+                                        <form action="{{ url_for('mentorship.request_mentor', mentor_id=mentor.id) }}" method="POST" class="d-inline">
                                             <button type="submit" class="btn btn-primary btn-sm">Request Mentorship</button>
                                         </form>
                                     </div>
